--- a/bhindex.html
+++ b/bhindex.html
@@ -4,6 +4,7 @@
     	<meta charset="UTF-8">
     	<meta http-equiv="X-UA-Compatible" content="IE-edge">
     	<meta name="viewport" content="wdith-device-width, inital-scale-1">
+    	<title>Instagram</title>
 <!--Bootstrap-->
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="stylesheet.css" rel="stylesheet">
