--- a/bhindex.html
+++ b/bhindex.html
@@ -17,6 +17,18 @@
 	<!-- include all compiled plugins (below), or include indiviudal files as needed-->
 	<script src="bootstap/js/bootstap.min.js"></script>
    
+<div class="row">
+    <h2>ralphthecorgi</h2>
+    <a href="https://www.instagram.com/ralphthecorgi/" >Follow</a>
+    <div class="row">
+        <p><span> 2765 </span> posts</p>
+        <p><span> 320k </span> followers </p>
+        <p><span> 901 </span> following </p>
+    </div>
+    <h1> Ralph the Corgi </h1>
+    <p> Im a 7 year old pup with a handsome loof of a big brother named George.</p>
+    <a href="a"> https://www.instagram.com/ralphthecorgi/ </a>
+</div>
 
 
 
