--- a/bhindex.html
+++ b/bhindex.html
@@ -1,35 +1,76 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<meta charset="UTF-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE-edge">
-    	<meta name="viewport" content="wdith-device-width, inital-scale-1">
-    	<title>Instagram</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewport" content="wdith-device-width, inital-scale-1">
+        <title>Profile Page</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
 <!--Bootstrap-->
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="stylesheet.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.sin.css" rel="stylesheet"
+    <title>Profile Page</title>
     </head>
 
 <body>
 
-	<!--jQuery (neccessary for boootstraps javascript plugins) -->
-	<script src="jquery.min.js"></script>
-	<!-- include all compiled plugins (below), or include indiviudal files as needed-->
-	<script src="bootstap/js/bootstap.min.js"></script>
-   
+    <!--jQuery (neccessary for boootstraps javascript plugins) -->
+    <script src="jquery.min.js"></script>
+    <!-- include all compiled plugins (below), or include indiviudal files as needed-->
+    <script src="bootstap/js/bootstap.min.js"></script>
 
+<div class="container center" id="page">
+<nav class="navbar"
+    <div class="container fluid">
+        <div class="navbar-header">
+            <div class="navbar-brand" href="#">Instagram</a>
+</div>
+<ul class="nav navbar-nav navbar-center">
+    <li><a href=""><span class="glyphicon-envlpe"></span></a></li>
+    <li><a href=""><span class="glyphicon-envlpe"></span></a></li>
+    <li><a href=""><span class="glyphicon-envlpe"></span></a></li>
+    <li><a href=""><span class="glyphicon-envlpe"></span></a></li>
+</ul>
+<form class="navbar-nav navbar-center">
+            <div class="form-group">
+        <input type="text" class="form-control" placeholder="search">
+        </div>
+        </form>
+    </div>
+</nav>
 
+<div class="row">
+    <div class="col-md-9 col-xs-7">
+        <img class="img-circle" src="http://placeholder.com/75"></a>
+    </div>
 
+<div class="col-md-9 col-xs-7">
+    <h2>ralphthecorgi</h2>
+    &ensp;
+    <button type="button" class="btn btn-alert">Follow</button>
+    <a href="https://www.instagram.com/ralphthecorgi/" >Follow</a>
+    <div class="row">
+        <button type="button" class="btn btn-link">2,765 posts</button>
+        <button type="button" class="btn btn-link">320k followers</button>
+        <button type="button" class="btn btn-link">901 following</button>
+    </div>
+    <h1> Ralph the Corgi </h1>
+    <p> Im a 7 year old pup with a handsome loaf of a big brother named George.</p>
+    <a href="https://www.instagram.com/ralphthecorgi/"> ralphthecorgi</a>
+    </div>
+</div>
 
-
-
-
-
-
-
-
-
-
+<br>
+<div clsass="row"
+    <div class="col-md-2"></div>
+    <div class="col-md-1"><img class="img-circle" src="http://placeholder.com/75"</div>
+ <div class="col-md-1"><img class="img-circle" src="http://placeholder.com/75"</div>
+ <div class="col-md-1"><img class="img-circle" src="http://placeholder.com/75"</div>
+ <div class="col-md-1"><img class="img-circle" src="http://placeholder.com/75"</div>
+  <div class="col-md-1"><img class="img-circle" src="http://placeholder.com/75"</div>
 
     </body>
 <footer>
@@ -37,7 +78,3 @@
     <footer>
 
     </footer>
-    </body>
-
-
-</html> 
